@@ -20,7 +20,8 @@ qualname=MoinMoin.auth
 propagate=0
 
 [handlers]
-keys=logfile,stderr
+#keys=logfile,stderr
+keys=stderr
 
 [handler_logfile]
 class=FileHandler
@@ -38,7 +39,7 @@ args=(sys.stderr, )
 keys=default
 
 [formatter_default]
-format=%(asctime)s %(name)s %(levelname)s %(message)s
+format=%(asctime)s %(levelname)s %(name)s:%(lineno)d %(message)s
 datefmt=
 class=logging.Formatter
 
